remove catalog for generate_pages

--- a/www/checkbox/index.html
+++ b/www/checkbox/index.html
@@ -44,21 +44,20 @@
 		<main>
 			<form>
 				<label>
-					<input type=color></input>
+					<input type=color>
 					color0
 				</label>
 			</form>
 			<form>
 				<label>
-					<input type=number></input>
+					<input type=number>
 					block-size
 				</label>
 			</form>
 			<section>
 				<label>
 					<input type=checkbox>
-						checkbox
-					</input>
+					checkbox
 				</label>
 			</section>
 		</main>
