css components are cool

--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-us">
-	<head></head>
+	<head>
+		<meta charset=utf-8>
+		<meta title="Home">
+		<meta description="A list of wireframe components">
+		<meta name=viewport content="width=device-width, initial-scale=1">
+	</head>
 	<body>
 		<header></header>
 		<main>
@@ -9,7 +14,10 @@
 			</p>
 			<nav>
 				<ol>
-					<li> <a href=/checkbox>checkbox</a>
+					<li>
+						<a href=/checkbox>
+							checkbox
+						</a>
 					</li>
 				</ol>
 			</nav>
