--- a/www/index.html
+++ b/www/index.html
@@ -2,25 +2,89 @@
 <html lang="en-us">
 	<head>
 		<meta charset=utf-8>
-		<meta title="Home">
-		<meta description="A list of wireframe components">
 		<meta name=viewport content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="./mod.css">
 	</head>
 	<body>
 		<header></header>
 		<main>
-			<p>
-				hai :3
-			</p>
-			<nav>
-				<ol>
-					<li>
-						<a href=/checkbox>
-							checkbox
-						</a>
-					</li>
-				</ol>
-			</nav>
+			<h1>wireframe</h1>
+			<h2>Interactive Elements</h2>
+			<section>
+				<h3>Button</h3>
+				<!-- stateful -->
+				<button>click</button>
+				<!-- disabled -->
+				<button disabled>click</button >
+			</section>
+			<section>
+				<h3>Reset</h3>
+				<!-- stateful -->
+				<button type="reset">reset</button>
+				<!-- disabled -->
+				<button type="reset" disabled>reset</button >
+			</section>
+			<section>
+				<h3>Submit</h3>
+				<!-- stateful -->
+				<button type="submit">submit</button>
+				<!-- disabled -->
+				<button type="submit" disabled>submit</button >
+			</section>
+			<section>
+				<h3>Chips</h3>
+				<!-- stateful -->
+				<button type="submit">submit</button>
+				<!-- disabled -->
+				<button type="submit" disabled>submit</button >
+			</section>
+			<section>
+				<h3>Switch</h3>
+				<!-- stateful -->
+				<input type="checkbox" role="switch">
+				<!-- disabled -->
+				<input type="checkbox" role="switch" disabled>
+			</section>
+			<section>
+				<h3>Checkbox</h3>
+				<!-- stateful -->
+				<input type="checkbox">
+				<!-- disabled -->
+				<input type="checkbox" disabled>
+			</section>
+			<section>
+				<h3>Radio</h3>
+				<!-- stateful -->
+				<input type="radio">
+				<!-- stateful -->
+				<input type="radio">
+				<!-- stateful -->
+				<input type="radio">
+				<!-- disabled -->
+				<input type="radio" disabled>
+			</section>
+			<section>
+				<h3>Segmented Button (Single)</h3>
+				<!-- stateful -->
+				<input type="radio">
+				<!-- stateful -->
+				<input type="radio">
+				<!-- stateful -->
+				<input type="radio">
+				<!-- disabled -->
+				<input type="radio" disabled>
+			</section>
+			<section>
+				<h3>Segmented Button (Multi)</h3>
+				<!-- stateful -->
+				<input type="checkbox">
+				<!-- stateful -->
+				<input type="checkbox">
+				<!-- stateful -->
+				<input type="checkbox">
+				<!-- disabled -->
+				<input type="checkbox" disabled>
+			</section>
 		</main>
 		<footer></footer>
 	</body>
