little baseline grid

--- a/www/index.html
+++ b/www/index.html
@@ -9,82 +9,8 @@
 		<header></header>
 		<main>
 			<h1>wireframe</h1>
-			<h2>Interactive Elements</h2>
-			<section>
-				<h3>Button</h3>
-				<!-- stateful -->
-				<button>click</button>
-				<!-- disabled -->
-				<button disabled>click</button >
-			</section>
-			<section>
-				<h3>Reset</h3>
-				<!-- stateful -->
-				<button type="reset">reset</button>
-				<!-- disabled -->
-				<button type="reset" disabled>reset</button >
-			</section>
-			<section>
-				<h3>Submit</h3>
-				<!-- stateful -->
-				<button type="submit">submit</button>
-				<!-- disabled -->
-				<button type="submit" disabled>submit</button >
-			</section>
-			<section>
-				<h3>Chips</h3>
-				<!-- stateful -->
-				<button type="submit">submit</button>
-				<!-- disabled -->
-				<button type="submit" disabled>submit</button >
-			</section>
-			<section>
-				<h3>Switch</h3>
-				<!-- stateful -->
-				<input type="checkbox" role="switch">
-				<!-- disabled -->
-				<input type="checkbox" role="switch" disabled>
-			</section>
-			<section>
-				<h3>Checkbox</h3>
-				<!-- stateful -->
-				<input type="checkbox">
-				<!-- disabled -->
-				<input type="checkbox" disabled>
-			</section>
-			<section>
-				<h3>Radio</h3>
-				<!-- stateful -->
-				<input type="radio">
-				<!-- stateful -->
-				<input type="radio">
-				<!-- stateful -->
-				<input type="radio">
-				<!-- disabled -->
-				<input type="radio" disabled>
-			</section>
-			<section>
-				<h3>Segmented Button (Single)</h3>
-				<!-- stateful -->
-				<input type="radio">
-				<!-- stateful -->
-				<input type="radio">
-				<!-- stateful -->
-				<input type="radio">
-				<!-- disabled -->
-				<input type="radio" disabled>
-			</section>
-			<section>
-				<h3>Segmented Button (Multi)</h3>
-				<!-- stateful -->
-				<input type="checkbox">
-				<!-- stateful -->
-				<input type="checkbox">
-				<!-- stateful -->
-				<input type="checkbox">
-				<!-- disabled -->
-				<input type="checkbox" disabled>
-			</section>
+			<p><a href="./inputs.html">inputs</a></p>
+			<p><a href="./typography.html">typography</a></p>
 		</main>
 		<footer></footer>
 	</body>
