--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
 		<main>
 			<h1>wireframe</h1>
 			<p><a href="./inputs.html">inputs</a></p>
-			<p><a href="./typography.html">typography</a></p>
+			<p><a href="./baseline_grid.html">baseline grid</a></p>
 		</main>
 		<footer></footer>
 	</body>
