baseline text inputs

--- a/www/inputs.html
+++ b/www/inputs.html
@@ -4,43 +4,21 @@
 		<meta charset=utf-8>
 		<meta name=viewport content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="./mod.css">
+		<link rel="stylesheet" href="./styles/baseline_grid.css">
+
 	</head>
 	<body>
 		<header></header>
 		<main>
 			<h1>wireframe</h1>
 			<h2>Interactive Elements</h2>
-			<section>
-				<h3>Checkbox</h3>
-				<!-- stateful -->
-				<input type="checkbox">
-				<!-- disabled -->
-				<input type="checkbox" disabled>
-			</section>
-			<section>
-				<h3>Radio</h3>
-				<!-- stateful -->
-				<input type="radio">
-				<!-- stateful -->
-				<input type="radio">
-				<!-- stateful -->
-				<input type="radio">
-				<!-- disabled -->
-				<input type="radio" disabled>
-			</section>
-			<section>
-				<h3>Switch</h3>
-				<!-- stateful -->
-				<input type="checkbox" role="switch">
-				<!-- disabled -->
-				<input type="checkbox" role="switch" disabled>
-			</section>
+
 			<section>
 				<h3>Text Input</h3>
 				<!-- stateful -->
-				<input type="text">
-				<!-- disabled -->
-				<input type=text disabled>
+					<input type="text">
+					<!-- disabled -->
+					<input type=text disabled>
 			</section>
 			<section>
 				<h3>Email</h3>
@@ -78,13 +56,6 @@
 				<input type=file disabled>
 			</section>
 			<section>
-				<h3>Image Input</h3>
-				<!-- stateful -->
-				<input type="image">
-				<!-- disabled -->
-				<input type=image disabled>
-			</section>
-			<section>
 				<h3>Color</h3>
 				<!-- stateful -->
 				<input type="color">
@@ -97,28 +68,6 @@
 				<textarea type="text"></textarea>
 				<!-- disabled -->
 				<textarea type=text disabled></textarea>
-			</section>
-			<section>
-				<h3>Segmented Button (Single)</h3>
-				<!-- stateful -->
-				<input type="radio">
-				<!-- stateful -->
-				<input type="radio">
-				<!-- stateful -->
-				<input type="radio">
-				<!-- disabled -->
-				<input type="radio" disabled>
-			</section>
-			<section>
-				<h3>Segmented Button (Multi)</h3>
-				<!-- stateful -->
-				<input type="checkbox">
-				<!-- stateful -->
-				<input type="checkbox">
-				<!-- stateful -->
-				<input type="checkbox">
-				<!-- disabled -->
-				<input type="checkbox" disabled>
 			</section>
 			<section>
 				<h3>Button</h3>
