--- a/www/inputs.html
+++ b/www/inputs.html
@@ -4,7 +4,7 @@
 		<meta charset=utf-8>
 		<meta name=viewport content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="./mod.css">
-		<link rel="stylesheet" href="./styles/baseline_grid.css">
+		<!-- <link rel="stylesheet" href="./styles/baseline_grid.css"> -->
 
 	</head>
 	<body>
@@ -12,65 +12,99 @@
 		<main>
 			<h1>wireframe</h1>
 			<h2>Interactive Elements</h2>
-
 			<section>
-				<h3>Text Input</h3>
+				<h5>Checkbox</h5>
 				<!-- stateful -->
-					<input type="text">
-					<!-- disabled -->
-					<input type=text disabled>
+				<input type="checkbox">
+				<!-- disabled -->
+				<input type="checkbox" disabled>
 			</section>
 			<section>
-				<h3>Email</h3>
+				<h5>Radio</h5>
+				<!-- stateful -->
+				<input type="radio" name="radio_demo" value="radio_a">
+				<!-- stateful -->
+				<input type="radio" name="radio_demo" value="radio_b">
+				<!-- stateful -->
+				<input type="radio" name="radio_demo" value="radio_c">
+				<!-- disabled -->
+				<input type="radio" disabled>
+			</section>
+			<section>
+				<h5>Switch</h5>
+				<!-- stateful -->
+				<input type="checkbox" role="switch">
+				<!-- disabled -->
+				<input type="checkbox" role="switch" disabled>
+			</section>
+			<section>
+				<h5>Select</h5>
+				<!-- stateful -->
+				<select>
+					<option>dog</option>
+					<option>cat</option>
+				</select>
+				<!-- disabled -->
+				
+			</section>
+			<section>
+				<h5>Text Input</h5>
 				<!-- stateful -->
 				<input type="text">
 				<!-- disabled -->
 				<input type=text disabled>
 			</section>
 			<section>
-				<h3>Password</h3>
+				<h5>Email</h5>
+				<!-- stateful -->
+				<input type="text">
+				<!-- disabled -->
+				<input type=text disabled>
+			</section>
+			<section>
+				<h5>Password</h5>
 				<!-- stateful -->
 				<input type="password">
 				<!-- disabled -->
 				<input type=password disabled>
 			</section>
 			<section>
-				<h3>Time</h3>
+				<h5>Time</h5>
 				<!-- stateful -->
 				<input type="time">
 				<!-- disabled -->
 				<input type=time disabled>
 			</section>
 			<section>
-				<h3>Date</h3>
+				<h5>Date</h5>
 				<!-- stateful -->
 				<input type="date">
 				<!-- disabled -->
 				<input type=date disabled>
 			</section>
 			<section>
-				<h3>File</h3>
+				<h5>File</h5>
 				<!-- stateful -->
 				<input type="file">
 				<!-- disabled -->
 				<input type=file disabled>
 			</section>
 			<section>
-				<h3>Color</h3>
+				<h5>Color</h5>
 				<!-- stateful -->
 				<input type="color">
 				<!-- disabled -->
 				<input type=color disabled>
 			</section>
 			<section>
-				<h3>Textarea</h3>
+				<h5>Textarea</h5>
 				<!-- stateful -->
-				<textarea type="text"></textarea>
+				<textarea></textarea>
 				<!-- disabled -->
-				<textarea type=text disabled></textarea>
+				<textarea disabled></textarea>
 			</section>
 			<section>
-				<h3>Button</h3>
+				<h5>Button</h5>
 				<!-- stateful -->
 				<button>click</button>
 				<!-- disabled -->
@@ -81,21 +115,21 @@
 				<input type="button" disabled value="click">
 			</section>
 			<section>
-				<h3>Reset</h3>
+				<h5>Reset</h5>
 				<!-- stateful -->
 				<button type="reset">reset</button>
 				<!-- disabled -->
 				<button type="reset" disabled>reset</button >
 			</section>
 			<section>
-				<h3>Submit</h3>
+				<h5>Submit</h5>
 				<!-- stateful -->
 				<button type="submit">submit</button>
 				<!-- disabled -->
 				<button type="submit" disabled>submit</button >
 			</section>
 			<section>
-				<h3>Chips</h3>
+				<h5>Chips</h5>
 				<!-- stateful -->
 				<button type="submit">submit</button>
 				<!-- disabled -->
