--- a/www/typography.html
+++ b/www/typography.html
@@ -4,7 +4,6 @@
 		<meta charset=utf-8>
 		<meta name=viewport content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="./mod.css">
-		<link rel="stylesheet" href="./styles/baseline_grid_typography.css">
 		<link rel="stylesheet" href="./app.css">
 
 	</head>
@@ -17,24 +16,24 @@
 			<p>This is a paragraph with <b>bold</b> text and an <a href="">anchor</a></p>
 			<h1>WIREFRAME</h1>
 			<p>This is a paragraph with <b>bold</b> text and an <a href="">anchor</a></p>
-			<h1>header 1</h1>
-			<h2>header 2</h2>
-			<h3>header 3</h3>
-			<h4>header 4</h4>
-			<h5>header 5</h5>
-			<h6>header 6</h6>
+			<h1>Header 1</h1>
+			<h2>Header 2</h2>
+			<h3>Header 3</h3>
+			<h4>Header 4</h4>
+			<h5>Header 5</h5>
+			<h6>Header 6</h6>
 			<article>
-				<h2>header 2</h2>
+				<h2>Header 2</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam dictum, libero non placerat elementum, lacus mi scelerisque sapien, a blandit massa leo ac ex. Proin at nisi sed felis commodo mollis eget pulvinar ante. Mauris eleifend vulputate congue. Nulla sollicitudin mi ac ultricies varius. Nulla tempor, metus eu sodales mattis, erat quam egestas neque, at lobortis nisi lectus ut tellus. Aenean convallis nunc quis euismod pulvinar. Quisque egestas, elit ac interdum pulvinar, est tortor semper dolor, non blandit ipsum erat sed risus. Duis massa magna, rhoncus vitae enim id, aliquam pellentesque enim. Sed semper, urna in facilisis lacinia, odio lorem molestie orci, eu pharetra leo ante sit amet arcu. Ut mollis pharetra urna, at hendrerit risus interdum ac.</p>
 			</article>
 			<section container>
 				<section>
-					<h2>header 2</h2>
+					<h2>Header 2</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam dictum, libero non placerat elementum, lacus mi scelerisque sapien, a blandit massa leo ac ex. Proin at nisi sed felis commodo mollis eget pulvinar ante. Mauris eleifend vulputate congue. Nulla sollicitudin mi ac ultricies varius. Nulla tempor, metus eu sodales mattis, erat quam egestas neque, at lobortis nisi lectus ut tellus. Aenean convallis nunc quis euismod pulvinar. Quisque egestas, elit ac interdum pulvinar, est tortor semper dolor, non blandit ipsum erat sed risus. Duis massa magna, rhoncus vitae enim id, aliquam pellentesque enim. Sed semper, urna in facilisis lacinia, odio lorem molestie orci, eu pharetra leo ante sit amet arcu. Ut mollis pharetra urna, at hendrerit risus interdum ac.</p>
 				</section>
 				<section>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam dictum, libero non placerat elementum, lacus mi scelerisque sapien, a blandit massa leo ac ex. Proin at nisi sed felis commodo mollis eget pulvinar ante. Mauris eleifend vulputate congue. </p>
-					<h2>header 2</h2>
+					<h2>Header 2</h2>
 					<p>Nulla sollicitudin mi ac ultricies varius. Nulla tempor, metus eu sodales mattis, erat quam egestas neque, at lobortis nisi lectus ut tellus. Aenean convallis nunc quis euismod pulvinar. Quisque egestas, elit ac interdum pulvinar, est tortor semper dolor, non blandit ipsum erat sed risus. Duis massa magna, rhoncus vitae enim id, aliquam pellentesque enim. Sed semper, urna in facilisis lacinia, odio lorem molestie orci, eu pharetra leo ante sit amet arcu. Ut mollis pharetra urna, at hendrerit risus interdum ac.</p>
 				</section>
 			</section>
