--- a/www/baseline_grid.html
+++ b/www/baseline_grid.html
@@ -11,11 +11,11 @@
 	<body>
 		<header></header>
 		<main>
+			<span>This is a paragraph with <b>bold</b> text and an <a href="">anchor</a></span>
 			<p>This is a paragraph with <b>bold</b> text and an <a href="">anchor</a></p>
 			<p>This is a paragraph with <b>bold</b> text and an <a href="">anchor</a></p>
 			<p>This is a paragraph with <b>bold</b> text and an <a href="">anchor</a></p>
-			<p>This is a paragraph with <b>bold</b> text and an <a href="">anchor</a></p>
-			<h1>WIREFRAME</h1>
+			<h1>Wireframe</h1>
 			<p>This is a paragraph with <b>bold</b> text and an <a href="">anchor</a></p>
 			<h1>header 1</h1>
 			<h2>header 2</h2>
