--- a/www/index.html
+++ b/www/index.html
@@ -8,9 +8,10 @@
 	<body>
 		<header></header>
 		<main>
-			<h1>wireframe</h1>
-			<p><a href="./inputs.html">inputs</a></p>
-			<p><a href="./baseline_grid.html">baseline grid</a></p>
+			<h1>Wireframe</h1>
+			<p><a href="./typography.html">Typography</a></p>
+			<p><a href="./inputs.html">Inputs</a></p>
+			<p><a href="./baseline_grid.html">Baseline grid</a></p>
 		</main>
 		<footer></footer>
 	</body>
