--- a/www/tables.html
+++ b/www/tables.html
@@ -10,11 +10,11 @@
 	<body>
 		<header></header>
 		<main>
-			<h1>WIREFRAME</h1>
+			<h1>Wireframe</h1>
 			<section>
 				<h6>Header 6</h6>
 				<table>
-					
+
 				</table>
 			</section>
 		</main>
