--- a/www/inputs.html
+++ b/www/inputs.html
@@ -10,7 +10,7 @@
 	<body>
 		<header></header>
 		<main>
-			<h1>wireframe</h1>
+			<h1>Wireframe</h1>
 			<h2>Interactive Elements</h2>
 			<section>
 				<h5>Checkbox</h5>
@@ -74,6 +74,13 @@
 				<input type="time">
 				<!-- disabled -->
 				<input type=time disabled>
+			<section>
+				<h5>Number</h5>
+				<!-- stateful -->
+				<input type="number">
+				<!-- disabled -->
+				<input type=number disabled>
+			</section>
 			</section>
 			<section>
 				<h5>Date</h5>
