little bit of dark mode

--- a/www/inputs.html
+++ b/www/inputs.html
@@ -43,6 +43,7 @@
 				<select>
 					<option>dog</option>
 					<option>cat</option>
+					<option>areoplane</option>
 				</select>
 				<!-- disabled -->
 				
