move styles to own module

--- a/www/inputs.html
+++ b/www/inputs.html
@@ -3,9 +3,8 @@
 	<head>
 		<meta charset=utf-8>
 		<meta name=viewport content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="./mod.css">
+		<link rel="stylesheet" href="../styles/mod.css">
 		<!-- <link rel="stylesheet" href="./styles/baseline_grid.css"> -->
-
 	</head>
 	<body>
 		<header></header>
@@ -45,8 +44,19 @@
 					<option>cat</option>
 					<option>areoplane</option>
 				</select>
+				<!-- <select multiple>
+					<option>dog</option>
+					<option>cat</option>
+					<option>bear</option>
+					<option>lion</option>
+					<option>areoplane</option>
+				</select> -->
 				<!-- disabled -->
-				
+				<select disabled>
+					<option>dog</option>
+					<option>cat</option>
+					<option>areoplane</option>
+				</select>
 			</section>
 			<section>
 				<h5>Text Input</h5>
