--- a/www/baseline_grid.html
+++ b/www/baseline_grid.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset=utf-8>
 		<meta name=viewport content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="./mod.css">
-		<link rel="stylesheet" href="./styles/baseline_grid_typography.css">
+		<link rel="stylesheet" href="../styles/mod.css">
+		<link rel="stylesheet" href="../styles/baseline_grid_typography.css">
 		<link rel="stylesheet" href="./app.css">
 
 	</head>
