--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset=utf-8>
 		<meta name=viewport content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="./mod.css">
+		<link rel="stylesheet" href="../styles/mod.css">
 	</head>
 	<body>
 		<header></header>
