organize for sanity

--- a/examples/index.html
+++ b/examples/index.html
@@ -4,14 +4,15 @@
 		<meta charset=utf-8>
 		<meta name=viewport content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="../styles/mod.css">
+		<link rel="stylesheet" href="../themes/wireframe.css">
 	</head>
 	<body>
 		<header></header>
 		<main>
 			<h1>Wireframe</h1>
-			<p><a href="./typography.html">Typography</a></p>
-			<p><a href="./inputs.html">Inputs</a></p>
-			<p><a href="./baseline_grid.html">Baseline grid</a></p>
+			<p><a href="./typography/">Typography</a></p>
+			<p><a href="./inputs/">Inputs</a></p>
+			<p><a href="./baseline_grid/">Baseline grid</a></p>
 		</main>
 		<footer></footer>
 	</body>
