--- a/examples/baseline_grid/index.html
+++ b/examples/baseline_grid/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset=utf-8>
 		<meta name=viewport content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="../styles/mod.css">
-		<link rel="stylesheet" href="../styles/baseline_grid_typography.css">
-		<link rel="stylesheet" href="./app.css">
-
+		<link rel="stylesheet" href="../../themes/wireframe.css">
+		<link rel="stylesheet" href="../../styles/mod.css">
+		<link rel="stylesheet" href="../../styles/baseline_grid_typography.css">
+		<link rel="stylesheet" href="../typography/app.css">
 	</head>
 	<body>
 		<header></header>
