--- a/examples/inputs/index.html
+++ b/examples/inputs/index.html
@@ -12,36 +12,46 @@
 			<h1>Wireframe</h1>
 			<h2>Interactive Elements</h2>
 			<section>
-				<h5>Checkbox</h5>
+				<h6>Checkbox</h6>
 				<input type="checkbox">
 				<input type="checkbox" disabled>
 			</section>
 			<section>
-				<h5>Radio</h5>
+				<h6>Radio</h6>
 				<input type="radio" name="radio_demo" value="radio_a">
 				<input type="radio" name="radio_demo" value="radio_b">
 				<input type="radio" name="radio_demo" value="radio_c">
 				<input type="radio" disabled>
 			</section>
 			<section>
-				<h5>Switch</h5>
+				<h6>Switch</h6>
 				<input type="checkbox" role="switch">
 				<input type="checkbox" role="switch" disabled>
 			</section>
 			<section>
-				<h5>Select</h5>
+				<h6>Button</h6>
+				<button>click</button>
+				<button disabled>click</button >
+				<input type="button" value="click">
+				<input type="button" disabled value="click">
+			</section>
+			<section>
+				<h6>Reset</h6>
+				<button type="reset">reset</button>
+				<button type="reset" disabled>reset</button >
+			</section>
+			<section>
+				<h6>Submit</h6>
+				<button type="submit">submit</button>
+				<button type="submit" disabled>submit</button >
+			</section>
+			<section>
+				<h6>Select</h6>
 				<select>
 					<option>dog</option>
 					<option>cat</option>
 					<option>areoplane</option>
 				</select>
-				<!-- <select multiple>
-					<option>dog</option>
-					<option>cat</option>
-					<option>bear</option>
-					<option>lion</option>
-					<option>areoplane</option>
-				</select> -->
 				<select disabled>
 					<option>dog</option>
 					<option>cat</option>
@@ -49,71 +59,54 @@
 				</select>
 			</section>
 			<section>
-				<h5>Text Input</h5>
+				<h6>Text Input</h6>
 				<input type="text">
 				<input type=text disabled>
 			</section>
 			<section>
-				<h5>Email</h5>
+				<h6>Email</h6>
 				<input type="text">
 				<input type=text disabled>
 			</section>
 			<section>
-				<h5>Password</h5>
+				<h6>Password</h6>
 				<input type="password">
 				<input type=password disabled>
 			</section>
 			<section>
-				<h5>Time</h5>
+				<h6>Time</h6>
 				<input type="time">
 				<input type=time disabled>
 			<section>
-				<h5>Number</h5>
+				<h6>Number</h6>
 				<input type="number">
 				<input type=number disabled>
 			</section>
 			</section>
 			<section>
-				<h5>Date</h5>
+				<h6>Date</h6>
 				<input type="date">
 				<input type=date disabled>
 			</section>
 			<section>
-				<h5>File</h5>
+				<h6>Datetime-local</h6>
+				<input type="datetime-local">
+				<input type=datetime-local disabled>
+			</section>
+			<section>
+				<h6>File</h6>
 				<input type="file">
 				<input type=file disabled>
 			</section>
 			<section>
-				<h5>Color</h5>
+				<h6>Color</h6>
 				<input type="color">
 				<input type=color disabled>
 			</section>
 			<section>
-				<h5>Textarea</h5>
+				<h6>Textarea</h6>
 				<textarea></textarea>
 				<textarea disabled></textarea>
-			</section>
-			<section>
-				<h5>Button</h5>
-				<button>click</button>
-				<button disabled>click</button >
-				<input type="button" value="click">
-				<input type="button" disabled value="click">
-			</section>
-			<section>
-				<h5>Reset</h5>
-				<button type="reset">reset</button>
-				<button type="reset" disabled>reset</button >
-			</section>
-			<section>
-				<h5>Submit</h5>
-				<button type="submit">submit</button>
-				<button type="submit" disabled>submit</button >
-			</section>
-			<section>
-				<h5>Chips</h5>
-				<button type="submit">submit</button>
-				<button type="submit" disabled>submit</button >
 			</section>
 		</main>
 		<footer></footer>
